# relix

./: .gitignore  CLA.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  LICENSING.md  MANIFESTO.md  README.md  SECURITY.md
.github/workflows/: cla.yml
crates/relix-cli/: Cargo.toml
crates/relix-cli/src/: audit.rs  cli.rs  lib.rs  main.rs  proxy.rs  rules_loader.rs
crates/relix-cli/src/proxy/: client.rs  driver.rs  lifecycle.rs  mod.rs  redact.rs  state.rs  url.rs
crates/relix-cli/src/proxy/protocols/: anthropic.rs  mod.rs  openai.rs  passthrough.rs
crates/relix-cli/tests/: anthropic_streaming.rs  openai_streaming.rs  redact_e2e.rs
crates/relix-cli/tests/common/: mod.rs
crates/relix-cli/tests/golden/: anthropic_clean_tool_use.sse  anthropic_poisoned_tool_use.sse  openai_clean_tool_call.sse  openai_poisoned_tool_call.sse
crates/relix-core/: Cargo.toml
crates/relix-core/src/: error.rs  inspect.rs  lib.rs  model.rs  protocol.rs  rules.rs  streaming.rs  streaming_openai.rs
crates/relix-core/src/redact/: config.rs  detector.rs  mod.rs  placeholder.rs  restore.rs  vault.rs
crates/relix-rules/: Cargo.toml
crates/relix-rules/src/: lib.rs
docs/rfcs/: 0001-multi-protocol-gateway.md  0002-openai-protocol-adapter.md  0003-hardening-plan.md  0004-secret-redaction.md  README.md
examples/poisoned-relay/: Cargo.toml
examples/poisoned-relay/src/: main.rs
rules/ioc/: credentials.yaml  exfiltration.yaml  relays.yaml
rules/ttp/: prompt-injection.yaml
