[package]
name = "relix-cli"
description = "Relix CLI: the local LLM API gateway that protects AI coding agents."
version.workspace = true
edition.workspace = true
license = "AGPL-3.0-or-later"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[[bin]]
name = "relix"
path = "src/main.rs"

[dependencies]
relix-core = { path = "../relix-core" }
tokio.workspace = true
tokio-stream.workspace = true
futures.workspace = true
axum.workspace = true
hyper.workspace = true
hyper-util.workspace = true
reqwest.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
bytes.workspace = true
url.workspace = true
chrono.workspace = true
uuid.workspace = true
eventsource-stream.workspace = true

[dev-dependencies]
wiremock.workspace = true
insta.workspace = true
