[package]
name = "relix-core"
description = "Core engine for Relix: protocol parsing, rule engine, threat detection."
version.workspace = true
edition.workspace = true
license = "Apache-2.0"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
bytes.workspace = true
url.workspace = true
chrono.workspace = true
uuid.workspace = true
once_cell.workspace = true
regex = "1"
blake3 = "1"
secrecy = { version = "0.8", features = ["serde"] }
zeroize = "1"
tokio = { workspace = true, default-features = false, features = ["sync", "time"] }

[dev-dependencies]
insta.workspace = true
tokio = { workspace = true }
