[package]
name = "poisoned-relay"
description = "A simulated poisoned LLM API relay for demonstrating Relix detection."
version.workspace = true
edition.workspace = true
license = "MIT"
publish = false

[[bin]]
name = "poisoned-relay"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
